k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nationalparks
spec:
  selector:
    matchLabels:
      app: nationalparks
  template:
    metadata:
      labels:
        app: nationalparks
    spec:
      containers:
      - name: nationalparks
        image: nationalparks/image
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /ws/healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
        readinessProbe:
          httpGet:
            path: /ws/healthz
            port: 8080
          initialDelaySeconds: 3
          periodSeconds: 10
          successThreshold: 1
          failureThreshold: 3
