k8s/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    description: Route for application's http service.
    argocd.argoproj.io/sync-options: Validate=false
  labels:
    application: nationalparks
    type: parksmap-backend
  name: nationalparks
spec:
  to:
    name: nationalparks
    kind: Service
  tls:
    termination: edge
